gateway/tikirisql/tikirisqly.output
Terminals unused in grammar

   STRING


Grammar

    0 $accept: sql $end

    1 sql: /* empty */
    2    | set_host_port
    3    | select_statement
    4    | create_statement
    5    | event_statement
    6    | delete_statement

    7 select_statement: SELECT column_commalist from_clause sample_period for_clause ';'
    8                 | SELECT column_commalist from_clause sample_period ';'
    9                 | SELECT column_commalist from_clause where_clause sample_period for_clause ';'
   10                 | SELECT column_commalist from_clause where_clause sample_period ';'
   11                 | SELECT column_commalist from_clause lifetime_period ';'

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS '(' nested_select ')' ';'

   13 event_statement: ON EVENT event_name '(' event_param ')' DO '(' nested_select ')' ';'

   14 delete_statement: DELETE QUERY INTNUM ';'

   15 nested_select: SELECT column_commalist from_clause sample_period for_clause
   16              | SELECT column_commalist from_clause sample_period
   17              | SELECT column_commalist from_clause where_clause sample_period for_clause
   18              | SELECT column_commalist from_clause where_clause sample_period

   19 column_commalist: column
   20                 | column_commalist ',' column

   21 column: NAME

   22 from_clause: FROM table

   23 table: NAME

   24 store_name: NAME

   25 event_name: NAME

   26 event_param: INTNUM

   27 sample_period: SAMPLE PERIOD INTNUM

   28 lifetime_period: LIFETIME INTNUM

   29 for_clause: FOR INTNUM

   30 where_clause: WHERE search_condition

   31 search_condition: search_condition OR search_condition
   32                 | search_condition AND search_condition
   33                 | NOT search_condition
   34                 | '(' search_condition ')'
   35                 | predicate

   36 predicate: comparison_predicate

   37 comparison_predicate: scalar_exp COMPARISON scalar_exp

   38 scalar_exp: scalar_exp '+' scalar_exp
   39           | scalar_exp '-' scalar_exp
   40           | scalar_exp '*' scalar_exp
   41           | scalar_exp '/' scalar_exp
   42           | lvalue
   43           | rvalue
   44           | '(' scalar_exp ')'

   45 rvalue: INTNUM

   46 lvalue: NAME

   47 set_host_port: set_port set_host ';'
   48              | set_host set_port ';'

   49 set_port: PORT INTNUM

   50 set_host: HOST NAME


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 13 34 44
')' (41) 12 13 34 44
'*' (42) 40
'+' (43) 38
',' (44) 20
'-' (45) 39
'/' (47) 41
';' (59) 7 8 9 10 11 12 13 14 47 48
error (256)
PORT (258) 49
HOST (259) 50
NAME (260) 21 23 24 25 46 50
STRING (261)
INTNUM (262) 12 14 26 27 28 29 45 49
NOT (263) 33
AND (264) 32
OR (265) 31
COMPARISON (266) 37
WHERE (267) 30
SELECT (268) 7 8 9 10 11 15 16 17 18
FROM (269) 22
CREATE (270) 12
STORE (271) 12
SIZE (272) 12
AS (273) 12
ON (274) 13
EVENT (275) 13
DO (276) 13
DELETE (277) 14
QUERY (278) 14
SAMPLE (279) 27
FOR (280) 29
PERIOD (281) 27
LIFETIME (282) 28


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
sql (37)
    on left: 1 2 3 4 5 6, on right: 0
select_statement (38)
    on left: 7 8 9 10 11, on right: 3
create_statement (39)
    on left: 12, on right: 4
event_statement (40)
    on left: 13, on right: 5
delete_statement (41)
    on left: 14, on right: 6
nested_select (42)
    on left: 15 16 17 18, on right: 12 13
column_commalist (43)
    on left: 19 20, on right: 7 8 9 10 11 15 16 17 18 20
column (44)
    on left: 21, on right: 19 20
from_clause (45)
    on left: 22, on right: 7 8 9 10 11 15 16 17 18
table (46)
    on left: 23, on right: 22
store_name (47)
    on left: 24, on right: 12
event_name (48)
    on left: 25, on right: 13
event_param (49)
    on left: 26, on right: 13
sample_period (50)
    on left: 27, on right: 7 8 9 10 15 16 17 18
lifetime_period (51)
    on left: 28, on right: 11
for_clause (52)
    on left: 29, on right: 7 9 15 17
where_clause (53)
    on left: 30, on right: 9 10 17 18
search_condition (54)
    on left: 31 32 33 34 35, on right: 30 31 32 33 34
predicate (55)
    on left: 36, on right: 35
comparison_predicate (56)
    on left: 37, on right: 36
scalar_exp (57)
    on left: 38 39 40 41 42 43 44, on right: 37 38 39 40 41 44
rvalue (58)
    on left: 45, on right: 43
lvalue (59)
    on left: 46, on right: 42
set_host_port (60)
    on left: 47 48, on right: 2
set_port (61)
    on left: 49, on right: 47 48
set_host (62)
    on left: 50, on right: 47 48


state 0

    0 $accept: . sql $end

    PORT    shift, and go to state 1
    HOST    shift, and go to state 2
    SELECT  shift, and go to state 3
    CREATE  shift, and go to state 4
    ON      shift, and go to state 5
    DELETE  shift, and go to state 6

    $default  reduce using rule 1 (sql)

    sql               go to state 7
    select_statement  go to state 8
    create_statement  go to state 9
    event_statement   go to state 10
    delete_statement  go to state 11
    set_host_port     go to state 12
    set_port          go to state 13
    set_host          go to state 14


state 1

   49 set_port: PORT . INTNUM

    INTNUM  shift, and go to state 15


state 2

   50 set_host: HOST . NAME

    NAME  shift, and go to state 16


state 3

    7 select_statement: SELECT . column_commalist from_clause sample_period for_clause ';'
    8                 | SELECT . column_commalist from_clause sample_period ';'
    9                 | SELECT . column_commalist from_clause where_clause sample_period for_clause ';'
   10                 | SELECT . column_commalist from_clause where_clause sample_period ';'
   11                 | SELECT . column_commalist from_clause lifetime_period ';'

    NAME  shift, and go to state 17

    column_commalist  go to state 18
    column            go to state 19


state 4

   12 create_statement: CREATE . STORE store_name SIZE INTNUM AS '(' nested_select ')' ';'

    STORE  shift, and go to state 20


state 5

   13 event_statement: ON . EVENT event_name '(' event_param ')' DO '(' nested_select ')' ';'

    EVENT  shift, and go to state 21


state 6

   14 delete_statement: DELETE . QUERY INTNUM ';'

    QUERY  shift, and go to state 22


state 7

    0 $accept: sql . $end

    $end  shift, and go to state 23


state 8

    3 sql: select_statement .

    $default  reduce using rule 3 (sql)


state 9

    4 sql: create_statement .

    $default  reduce using rule 4 (sql)


state 10

    5 sql: event_statement .

    $default  reduce using rule 5 (sql)


state 11

    6 sql: delete_statement .

    $default  reduce using rule 6 (sql)


state 12

    2 sql: set_host_port .

    $default  reduce using rule 2 (sql)


state 13

   47 set_host_port: set_port . set_host ';'

    HOST  shift, and go to state 2

    set_host  go to state 24


state 14

   48 set_host_port: set_host . set_port ';'

    PORT  shift, and go to state 1

    set_port  go to state 25


state 15

   49 set_port: PORT INTNUM .

    $default  reduce using rule 49 (set_port)


state 16

   50 set_host: HOST NAME .

    $default  reduce using rule 50 (set_host)


state 17

   21 column: NAME .

    $default  reduce using rule 21 (column)


state 18

    7 select_statement: SELECT column_commalist . from_clause sample_period for_clause ';'
    8                 | SELECT column_commalist . from_clause sample_period ';'
    9                 | SELECT column_commalist . from_clause where_clause sample_period for_clause ';'
   10                 | SELECT column_commalist . from_clause where_clause sample_period ';'
   11                 | SELECT column_commalist . from_clause lifetime_period ';'
   20 column_commalist: column_commalist . ',' column

    FROM  shift, and go to state 26
    ','   shift, and go to state 27

    from_clause  go to state 28


state 19

   19 column_commalist: column .

    $default  reduce using rule 19 (column_commalist)


state 20

   12 create_statement: CREATE STORE . store_name SIZE INTNUM AS '(' nested_select ')' ';'

    NAME  shift, and go to state 29

    store_name  go to state 30


state 21

   13 event_statement: ON EVENT . event_name '(' event_param ')' DO '(' nested_select ')' ';'

    NAME  shift, and go to state 31

    event_name  go to state 32


state 22

   14 delete_statement: DELETE QUERY . INTNUM ';'

    INTNUM  shift, and go to state 33


state 23

    0 $accept: sql $end .

    $default  accept


state 24

   47 set_host_port: set_port set_host . ';'

    ';'  shift, and go to state 34


state 25

   48 set_host_port: set_host set_port . ';'

    ';'  shift, and go to state 35


state 26

   22 from_clause: FROM . table

    NAME  shift, and go to state 36

    table  go to state 37


state 27

   20 column_commalist: column_commalist ',' . column

    NAME  shift, and go to state 17

    column  go to state 38


state 28

    7 select_statement: SELECT column_commalist from_clause . sample_period for_clause ';'
    8                 | SELECT column_commalist from_clause . sample_period ';'
    9                 | SELECT column_commalist from_clause . where_clause sample_period for_clause ';'
   10                 | SELECT column_commalist from_clause . where_clause sample_period ';'
   11                 | SELECT column_commalist from_clause . lifetime_period ';'

    WHERE     shift, and go to state 39
    SAMPLE    shift, and go to state 40
    LIFETIME  shift, and go to state 41

    sample_period    go to state 42
    lifetime_period  go to state 43
    where_clause     go to state 44


state 29

   24 store_name: NAME .

    $default  reduce using rule 24 (store_name)


state 30

   12 create_statement: CREATE STORE store_name . SIZE INTNUM AS '(' nested_select ')' ';'

    SIZE  shift, and go to state 45


state 31

   25 event_name: NAME .

    $default  reduce using rule 25 (event_name)


state 32

   13 event_statement: ON EVENT event_name . '(' event_param ')' DO '(' nested_select ')' ';'

    '('  shift, and go to state 46


state 33

   14 delete_statement: DELETE QUERY INTNUM . ';'

    ';'  shift, and go to state 47


state 34

   47 set_host_port: set_port set_host ';' .

    $default  reduce using rule 47 (set_host_port)


state 35

   48 set_host_port: set_host set_port ';' .

    $default  reduce using rule 48 (set_host_port)


state 36

   23 table: NAME .

    $default  reduce using rule 23 (table)


state 37

   22 from_clause: FROM table .

    $default  reduce using rule 22 (from_clause)


state 38

   20 column_commalist: column_commalist ',' column .

    $default  reduce using rule 20 (column_commalist)


state 39

   30 where_clause: WHERE . search_condition

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    search_condition      go to state 52
    predicate             go to state 53
    comparison_predicate  go to state 54
    scalar_exp            go to state 55
    rvalue                go to state 56
    lvalue                go to state 57


state 40

   27 sample_period: SAMPLE . PERIOD INTNUM

    PERIOD  shift, and go to state 58


state 41

   28 lifetime_period: LIFETIME . INTNUM

    INTNUM  shift, and go to state 59


state 42

    7 select_statement: SELECT column_commalist from_clause sample_period . for_clause ';'
    8                 | SELECT column_commalist from_clause sample_period . ';'

    FOR  shift, and go to state 60
    ';'  shift, and go to state 61

    for_clause  go to state 62


state 43

   11 select_statement: SELECT column_commalist from_clause lifetime_period . ';'

    ';'  shift, and go to state 63


state 44

    9 select_statement: SELECT column_commalist from_clause where_clause . sample_period for_clause ';'
   10                 | SELECT column_commalist from_clause where_clause . sample_period ';'

    SAMPLE  shift, and go to state 40

    sample_period  go to state 64


state 45

   12 create_statement: CREATE STORE store_name SIZE . INTNUM AS '(' nested_select ')' ';'

    INTNUM  shift, and go to state 65


state 46

   13 event_statement: ON EVENT event_name '(' . event_param ')' DO '(' nested_select ')' ';'

    INTNUM  shift, and go to state 66

    event_param  go to state 67


state 47

   14 delete_statement: DELETE QUERY INTNUM ';' .

    $default  reduce using rule 14 (delete_statement)


state 48

   46 lvalue: NAME .

    $default  reduce using rule 46 (lvalue)


state 49

   45 rvalue: INTNUM .

    $default  reduce using rule 45 (rvalue)


state 50

   33 search_condition: NOT . search_condition

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    search_condition      go to state 68
    predicate             go to state 53
    comparison_predicate  go to state 54
    scalar_exp            go to state 55
    rvalue                go to state 56
    lvalue                go to state 57


state 51

   34 search_condition: '(' . search_condition ')'
   44 scalar_exp: '(' . scalar_exp ')'

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    search_condition      go to state 69
    predicate             go to state 53
    comparison_predicate  go to state 54
    scalar_exp            go to state 70
    rvalue                go to state 56
    lvalue                go to state 57


state 52

   30 where_clause: WHERE search_condition .
   31 search_condition: search_condition . OR search_condition
   32                 | search_condition . AND search_condition

    AND  shift, and go to state 71
    OR   shift, and go to state 72

    $default  reduce using rule 30 (where_clause)


state 53

   35 search_condition: predicate .

    $default  reduce using rule 35 (search_condition)


state 54

   36 predicate: comparison_predicate .

    $default  reduce using rule 36 (predicate)


state 55

   37 comparison_predicate: scalar_exp . COMPARISON scalar_exp
   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp

    COMPARISON  shift, and go to state 73
    '+'         shift, and go to state 74
    '-'         shift, and go to state 75
    '*'         shift, and go to state 76
    '/'         shift, and go to state 77


state 56

   43 scalar_exp: rvalue .

    $default  reduce using rule 43 (scalar_exp)


state 57

   42 scalar_exp: lvalue .

    $default  reduce using rule 42 (scalar_exp)


state 58

   27 sample_period: SAMPLE PERIOD . INTNUM

    INTNUM  shift, and go to state 78


state 59

   28 lifetime_period: LIFETIME INTNUM .

    $default  reduce using rule 28 (lifetime_period)


state 60

   29 for_clause: FOR . INTNUM

    INTNUM  shift, and go to state 79


state 61

    8 select_statement: SELECT column_commalist from_clause sample_period ';' .

    $default  reduce using rule 8 (select_statement)


state 62

    7 select_statement: SELECT column_commalist from_clause sample_period for_clause . ';'

    ';'  shift, and go to state 80


state 63

   11 select_statement: SELECT column_commalist from_clause lifetime_period ';' .

    $default  reduce using rule 11 (select_statement)


state 64

    9 select_statement: SELECT column_commalist from_clause where_clause sample_period . for_clause ';'
   10                 | SELECT column_commalist from_clause where_clause sample_period . ';'

    FOR  shift, and go to state 60
    ';'  shift, and go to state 81

    for_clause  go to state 82


state 65

   12 create_statement: CREATE STORE store_name SIZE INTNUM . AS '(' nested_select ')' ';'

    AS  shift, and go to state 83


state 66

   26 event_param: INTNUM .

    $default  reduce using rule 26 (event_param)


state 67

   13 event_statement: ON EVENT event_name '(' event_param . ')' DO '(' nested_select ')' ';'

    ')'  shift, and go to state 84


state 68

   31 search_condition: search_condition . OR search_condition
   32                 | search_condition . AND search_condition
   33                 | NOT search_condition .

    $default  reduce using rule 33 (search_condition)


state 69

   31 search_condition: search_condition . OR search_condition
   32                 | search_condition . AND search_condition
   34                 | '(' search_condition . ')'

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    ')'  shift, and go to state 85


state 70

   37 comparison_predicate: scalar_exp . COMPARISON scalar_exp
   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp
   44           | '(' scalar_exp . ')'

    COMPARISON  shift, and go to state 73
    '+'         shift, and go to state 74
    '-'         shift, and go to state 75
    '*'         shift, and go to state 76
    '/'         shift, and go to state 77
    ')'         shift, and go to state 86


state 71

   32 search_condition: search_condition AND . search_condition

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    search_condition      go to state 87
    predicate             go to state 53
    comparison_predicate  go to state 54
    scalar_exp            go to state 55
    rvalue                go to state 56
    lvalue                go to state 57


state 72

   31 search_condition: search_condition OR . search_condition

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    NOT     shift, and go to state 50
    '('     shift, and go to state 51

    search_condition      go to state 88
    predicate             go to state 53
    comparison_predicate  go to state 54
    scalar_exp            go to state 55
    rvalue                go to state 56
    lvalue                go to state 57


state 73

   37 comparison_predicate: scalar_exp COMPARISON . scalar_exp

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 90
    rvalue      go to state 56
    lvalue      go to state 57


state 74

   38 scalar_exp: scalar_exp '+' . scalar_exp

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 91
    rvalue      go to state 56
    lvalue      go to state 57


state 75

   39 scalar_exp: scalar_exp '-' . scalar_exp

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 92
    rvalue      go to state 56
    lvalue      go to state 57


state 76

   40 scalar_exp: scalar_exp '*' . scalar_exp

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 93
    rvalue      go to state 56
    lvalue      go to state 57


state 77

   41 scalar_exp: scalar_exp '/' . scalar_exp

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 94
    rvalue      go to state 56
    lvalue      go to state 57


state 78

   27 sample_period: SAMPLE PERIOD INTNUM .

    $default  reduce using rule 27 (sample_period)


state 79

   29 for_clause: FOR INTNUM .

    $default  reduce using rule 29 (for_clause)


state 80

    7 select_statement: SELECT column_commalist from_clause sample_period for_clause ';' .

    $default  reduce using rule 7 (select_statement)


state 81

   10 select_statement: SELECT column_commalist from_clause where_clause sample_period ';' .

    $default  reduce using rule 10 (select_statement)


state 82

    9 select_statement: SELECT column_commalist from_clause where_clause sample_period for_clause . ';'

    ';'  shift, and go to state 95


state 83

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS . '(' nested_select ')' ';'

    '('  shift, and go to state 96


state 84

   13 event_statement: ON EVENT event_name '(' event_param ')' . DO '(' nested_select ')' ';'

    DO  shift, and go to state 97


state 85

   34 search_condition: '(' search_condition ')' .

    $default  reduce using rule 34 (search_condition)


state 86

   44 scalar_exp: '(' scalar_exp ')' .

    $default  reduce using rule 44 (scalar_exp)


state 87

   31 search_condition: search_condition . OR search_condition
   32                 | search_condition . AND search_condition
   32                 | search_condition AND search_condition .

    $default  reduce using rule 32 (search_condition)


state 88

   31 search_condition: search_condition . OR search_condition
   31                 | search_condition OR search_condition .
   32                 | search_condition . AND search_condition

    $default  reduce using rule 31 (search_condition)


state 89

   44 scalar_exp: '(' . scalar_exp ')'

    NAME    shift, and go to state 48
    INTNUM  shift, and go to state 49
    '('     shift, and go to state 89

    scalar_exp  go to state 98
    rvalue      go to state 56
    lvalue      go to state 57


state 90

   37 comparison_predicate: scalar_exp COMPARISON scalar_exp .
   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp

    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77

    $default  reduce using rule 37 (comparison_predicate)


state 91

   38 scalar_exp: scalar_exp . '+' scalar_exp
   38           | scalar_exp '+' scalar_exp .
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp

    $default  reduce using rule 38 (scalar_exp)


state 92

   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   39           | scalar_exp '-' scalar_exp .
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp

    $default  reduce using rule 39 (scalar_exp)


state 93

   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   40           | scalar_exp '*' scalar_exp .
   41           | scalar_exp . '/' scalar_exp

    $default  reduce using rule 40 (scalar_exp)


state 94

   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp
   41           | scalar_exp '/' scalar_exp .

    $default  reduce using rule 41 (scalar_exp)


state 95

    9 select_statement: SELECT column_commalist from_clause where_clause sample_period for_clause ';' .

    $default  reduce using rule 9 (select_statement)


state 96

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS '(' . nested_select ')' ';'

    SELECT  shift, and go to state 99

    nested_select  go to state 100


state 97

   13 event_statement: ON EVENT event_name '(' event_param ')' DO . '(' nested_select ')' ';'

    '('  shift, and go to state 101


state 98

   38 scalar_exp: scalar_exp . '+' scalar_exp
   39           | scalar_exp . '-' scalar_exp
   40           | scalar_exp . '*' scalar_exp
   41           | scalar_exp . '/' scalar_exp
   44           | '(' scalar_exp . ')'

    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    ')'  shift, and go to state 86


state 99

   15 nested_select: SELECT . column_commalist from_clause sample_period for_clause
   16              | SELECT . column_commalist from_clause sample_period
   17              | SELECT . column_commalist from_clause where_clause sample_period for_clause
   18              | SELECT . column_commalist from_clause where_clause sample_period

    NAME  shift, and go to state 17

    column_commalist  go to state 102
    column            go to state 19


state 100

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS '(' nested_select . ')' ';'

    ')'  shift, and go to state 103


state 101

   13 event_statement: ON EVENT event_name '(' event_param ')' DO '(' . nested_select ')' ';'

    SELECT  shift, and go to state 99

    nested_select  go to state 104


state 102

   15 nested_select: SELECT column_commalist . from_clause sample_period for_clause
   16              | SELECT column_commalist . from_clause sample_period
   17              | SELECT column_commalist . from_clause where_clause sample_period for_clause
   18              | SELECT column_commalist . from_clause where_clause sample_period
   20 column_commalist: column_commalist . ',' column

    FROM  shift, and go to state 26
    ','   shift, and go to state 27

    from_clause  go to state 105


state 103

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS '(' nested_select ')' . ';'

    ';'  shift, and go to state 106


state 104

   13 event_statement: ON EVENT event_name '(' event_param ')' DO '(' nested_select . ')' ';'

    ')'  shift, and go to state 107


state 105

   15 nested_select: SELECT column_commalist from_clause . sample_period for_clause
   16              | SELECT column_commalist from_clause . sample_period
   17              | SELECT column_commalist from_clause . where_clause sample_period for_clause
   18              | SELECT column_commalist from_clause . where_clause sample_period

    WHERE   shift, and go to state 39
    SAMPLE  shift, and go to state 40

    sample_period  go to state 108
    where_clause   go to state 109


state 106

   12 create_statement: CREATE STORE store_name SIZE INTNUM AS '(' nested_select ')' ';' .

    $default  reduce using rule 12 (create_statement)


state 107

   13 event_statement: ON EVENT event_name '(' event_param ')' DO '(' nested_select ')' . ';'

    ';'  shift, and go to state 110


state 108

   15 nested_select: SELECT column_commalist from_clause sample_period . for_clause
   16              | SELECT column_commalist from_clause sample_period .

    FOR  shift, and go to state 60

    $default  reduce using rule 16 (nested_select)

    for_clause  go to state 111


state 109

   17 nested_select: SELECT column_commalist from_clause where_clause . sample_period for_clause
   18              | SELECT column_commalist from_clause where_clause . sample_period

    SAMPLE  shift, and go to state 40

    sample_period  go to state 112


state 110

   13 event_statement: ON EVENT event_name '(' event_param ')' DO '(' nested_select ')' ';' .

    $default  reduce using rule 13 (event_statement)


state 111

   15 nested_select: SELECT column_commalist from_clause sample_period for_clause .

    $default  reduce using rule 15 (nested_select)


state 112

   17 nested_select: SELECT column_commalist from_clause where_clause sample_period . for_clause
   18              | SELECT column_commalist from_clause where_clause sample_period .

    FOR  shift, and go to state 60

    $default  reduce using rule 18 (nested_select)

    for_clause  go to state 113


state 113

   17 nested_select: SELECT column_commalist from_clause where_clause sample_period for_clause .

    $default  reduce using rule 17 (nested_select)
